[package]
name = "pubky-sdk-ffi"
version = "0.6.0-rc.6"
edition = "2021"
description = "Pubky SDK FFI bindings for cross-language integration"
authors = [
    "SeverinAlexB <severin@synonym.to>",
    "SHAcollision <shacollision@synonym.to>",
    "Nuh <nuh@nuh.dev>",
]
license = "MIT"
homepage = "https://github.com/pubky/pubky-core"
repository = "https://github.com/pubky/pubky-core"
keywords = ["web", "dht", "dns", "decentralized", "identity", "ffi"]
categories = [
    "network-programming",
    "cryptography",
    "web-programming",
    "authentication",
]
publish = false # Do not publish to crates.io

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
pubky = { path = "../../../pubky-sdk", default-features = false, features = [
    "json",
] }
pubky-common = { path = "../../../pubky-common" }
pkarr = { workspace = true, features = ["full"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1"
once_cell = "1.19"

[dev-dependencies]
pubky-testnet = { path = "../../../pubky-testnet" }
